--- a/index.html
+++ b/index.html
@@ -1,58 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Painel Financeiro iFood</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 20px;
-      color: #333;
-    }
-    h2 {
-      color: #c0392b;
-    }
-    .filtros {
-      margin-bottom: 20px;
-    }
-    label {
-      margin-right: 10px;
-    }
-    .painel {
-      background: #fff;
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .painel strong {
-      color: #2c3e50;
-    }
-  </style>
-</head>
-<body>
+<div class="filtros" style="display: flex; gap: 20px; flex-wrap: wrap; align-items: flex-end;">
+  <div style="display: flex; flex-direction: column;">
+    <label for="dataInicio">Data Início:</label>
+    <input type="date" id="dataInicio">
+  </div>
 
-  <h2>📊 Resumo Financeiro iFood</h2>
+  <div style="display: flex; flex-direction: column;">
+    <label for="dataFim">Data Fim:</label>
+    <input type="date" id="dataFim">
+  </div>
 
-  <div class="filtros">
-    <label>Data Início:
-      <input type="date" id="dataInicio">
-    </label>
-    <label>Data Fim:
-      <input type="date" id="dataFim">
-    </label>
-    <label>Empresa:
-      <select id="empresaFiltro">
-        <option value="">Todas</option>
-        <option value="PADARIA DELÍCIA">PADARIA DELÍCIA</option>
-        <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
-        <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
-      </select>
-    </label>
+  <div style="display: flex; flex-direction: column;">
+    <label for="empresaFiltro">Empresa:</label>
+    <select id="empresaFiltro">
+      <option value="">Todas</option>
+      <option value="PADARIA DELÍCIA">PADARIA DELÍCIA</option>
+      <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
+      <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
+    </select>
+  </div>
+
+  <div>
     <button onclick="filtrar()">🔍 Filtrar</button>
   </div>
+</div>
+
 
   <div id="resultados"></div>
 
