--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h2>Meta de Faturamento</h2>
     </a>
 
-    <a class="card" href="https://link-para-vendas-delivery.com" target="_blank">
+    <a class="card" href="https://grupodvbr.github.io/RESUMO-DELIVERY/" target="_blank">
       <div class="icon">🚚</div>
       <h2>Vendas Delivery</h2>
     </a>
