--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 
     <a class="card" href="https://link-para-meta-faturamento.com" target="_blank">
       <div class="icon">📈</div>
-      <h2>Meta de Faturamento</h2>
+      <h2>Resumo de transações financeiras</h2>
+    </a>
+
+    <a class="card" href="https://link-para-cancelamentos.com" target="_blank">
+      <div class="icon">❌</div>
+      <h2>Cancelamentos</h2>
     </a>
 
     <a class="card" href="https://grupodvbr.github.io/RESUMO-DELIVERY/" target="_blank">
@@ -89,9 +94,9 @@
       <h2>Vendas Delivery</h2>
     </a>
 
-    <a class="card" href="https://link-para-cancelamentos.com" target="_blank">
-      <div class="icon">❌</div>
-      <h2>Cancelamentos</h2>
+    <a class="card" href="https://link-para-meta-faturamento.com" target="_blank">
+      <div class="icon">📈</div>
+      <h2>Meta de Faturamento</h2>
     </a>
 
     <a class="card" href="https://link-para-conciliacao.com" target="_blank">
