--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <a class="card" href="https://link-para-conciliacao.com" target="_blank">
       <div class="icon">💳</div>
-      <h2>Conciliação</h2>
+      <h2>Conciliações</h2>
     </a>
 
   </div>
