--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </a>
 
     <a class="card" href="https://link-para-meta-faturamento.com" target="_blank">
-      <div class="icon">📈</div>
+      <div class="icon">📊</div>
       <h2>Meta de Faturamento</h2>
     </a>
 
