--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <div class="container">
 
-    <a class="card" href="https://link-para-meta-faturamento.com" target="_blank">
+    <a class="card" href="https://grupodvbr.github.io/RESUMO-TRANSA-ES-FINANCEIRAS/" target="_blank">
       <div class="icon">📈</div>
       <h2>Resumo de transações financeiras</h2>
     </a>
