--- a/index.html
+++ b/index.html
@@ -3,80 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Painel Financeiro - Grupo DV</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Resumo Financeiro - Grupo DV</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      background: #e8f5e9;
       margin: 0;
       padding: 15px;
     }
     h1 {
       text-align: center;
       margin-bottom: 20px;
+      font-size: 1.4em;
     }
     .filtros {
       display: flex;
       flex-direction: column;
-      align-items: center;
       gap: 10px;
-      margin-bottom: 20px;
+      max-width: 500px;
+      margin: 0 auto 20px;
     }
     .filtros label {
-      width: 100%;
-      max-width: 400px;
+      font-size: 0.9em;
       display: flex;
       flex-direction: column;
-      font-size: 0.9em;
     }
-    .filtros input, .filtros select, .filtros button {
+    .filtros input,
+    .filtros select,
+    .filtros button {
       padding: 10px;
       font-size: 1em;
       border-radius: 6px;
       border: 1px solid #ccc;
-      width: 100%;
     }
     button {
       background-color: #007bff;
       color: white;
-      cursor: pointer;
       border: none;
+      cursor: pointer;
     }
     button:hover {
       background-color: #0056b3;
     }
     .empresa-box {
-      background: #fff;
-      margin: 20px auto;
-      padding: 15px;
+      background: #d0f0d5;
       border-radius: 10px;
-      max-width: 800px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     }
-    h2 {
-      text-align: center;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    strong {
-      display: block;
-      text-align: center;
-      margin-top: 10px;
+    .empresa-box h2 {
+      margin: 0 0 10px;
       font-size: 1.1em;
     }
-    canvas {
-      display: block;
-      max-width: 100%;
-      height: auto !important;
-      margin: 20px auto;
+    .empresa-box ul {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+      font-size: 0.95em;
+    }
+    .empresa-box li {
+      margin-bottom: 4px;
     }
   </style>
 </head>
 <body>
 
-<h1>📊 Painel Financeiro — Grupo DV</h1>
+<h1>📊 Resumo Financeiro — Grupo DV</h1>
 
 <div class="filtros">
   <label>
@@ -113,6 +106,8 @@ const emojis = {
   "CONSUMO INTERNO": "👔",
   "BOLETO": "📃",
   "MARKETING": "📣",
+  "IFOOD": "🍱",
+  "DELIVERY MUCH": "🍔",
   "OUTROS": "🗂"
 };
 
@@ -159,46 +154,22 @@ function aplicarFiltro() {
     const dadosEmpresa = dadosFiltrados.filter(i => i.Empresa === emp);
     const total = dadosEmpresa.reduce((s, i) => s + parseFloat(i.Valor), 0);
 
-    let box = document.createElement("div");
+    const box = document.createElement("div");
     box.className = "empresa-box";
 
-    let html = `<h2>${emp}</h2><ul>`;
+    let html = `<h2>${emp.toUpperCase()} — R$ ${total.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</h2><ul>`;
     dadosEmpresa.forEach(item => {
       const emoji = emojis[item.Categoria.toUpperCase()] || "📌";
       html += `<li>${emoji} ${item.Categoria}: R$ ${parseFloat(item.Valor).toLocaleString('pt-BR', {minimumFractionDigits: 2})}</li>`;
     });
-    html += `</ul><strong>Total: R$ ${total.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</strong>`;
+    html += `</ul>`;
     box.innerHTML = html;
-
-    const canvas = document.createElement("canvas");
-    box.appendChild(canvas);
     painel.appendChild(box);
-
-    desenharGrafico(canvas, dadosEmpresa);
   });
 
   if (empresas.length === 0) {
     painel.innerHTML = "<p style='text-align:center'>Nenhum dado encontrado para os filtros selecionados.</p>";
   }
-}
-
-function desenharGrafico(canvas, dadosEmpresa) {
-  new Chart(canvas.getContext("2d"), {
-    type: 'pie',
-    data: {
-      labels: dadosEmpresa.map(e => `${emojis[e.Categoria.toUpperCase()] || "📌"} ${e.Categoria}`),
-      datasets: [{
-        data: dadosEmpresa.map(e => parseFloat(e.Valor)),
-        backgroundColor: dadosEmpresa.map((_, i) => `hsl(${i * 30}, 70%, 60%)`)
-      }]
-    },
-    options: {
-      plugins: {
-        title: { display: true, text: "Distribuição por Categoria" },
-        legend: { position: "bottom" }
-      }
-    }
-  });
 }
 
 carregarDados();
